<resources>
    <string name="app_name">Ubermensch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_a_time_for_the_pomodoro_session">Pick a time for the pomodoro session</string>
    <string name="_45_min">45 min</string>
    <string name="_30_min">30 min</string>
    <string name="_60_min">60 min</string>
    <string name="optimal_time_for_a_session">Optimal time for a pomodoro session</string>
    <string name="selected_item">Selected item:</string>

    <string-array name="Difficulties">
        <item>very hard</item>
        <item>hard</item>
        <item>medium</item>
        <item>easy</item>
        <item>very easy</item>
    </string-array>
</resources>

